✨ Feat:timer 기능 구현